Admin panel config version 0.5 not finished

--- a/app/views/home/yonerge.html.erb
+++ b/app/views/home/yonerge.html.erb
@@ -1,11 +1,99 @@
 <%= render "header" %>
 <div class="row">
 	<div class="col-md-12">
-		<h2>
-			Heading
-		</h2>
-		<p>
-			Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-		</p>
+<h1><strong>&Ouml;ĞRENCİ TOPLULUKLARI</strong></h1>
+
+<p><strong>Genel İlke</strong></p>
+
+<p>&Uuml;niversitemzi &ouml;ğrenci toplulukları ve bu topluluklarda &uuml;stlenilen g&ouml;revler, &ouml;ğrencilerin liderlik vasıflarını, kişilerarası sosyal ilişkilerini ve karar verme becerilerini geliştirmeleri adına &ouml;ğrencilerin kamp&uuml;s<strong> </strong>hayatındaki yerlerinin bilincinde olarak y&uuml;r&uuml;rl&uuml;kte bulunan yasa, y&ouml;netmelik ve kurallara uygun olarak &ouml;ğrencilerin mevcut topluluklarda g&ouml;rev almalarını veya yeni &ouml;ğrenci toplulukları oluşturmalarını desteklemektedir. Bu t&uuml;r etkinlikler ile &ouml;ğrencilerin toplumsal, k&uuml;lt&uuml;rel ve akademik gelişmelerine yardımcı olmak suretiyle &uuml;niversite yaşam kalitelerinin arttırılması ve kendilerine g&uuml;venen sorumlu bireyler yetiştirilmesi ama&ccedil;lanmaktadır.</p>
+
+<p><strong>&Ouml;ğrenci topluluklarının faaliyetleri ve işleyişi</strong></p>
+
+<p>(1) &Ouml;ğrenci toplulukları, ama&ccedil;larına uygun g&ouml;steri, fotoğraf ve film g&ouml;sterimi, konser, panel, &ccedil;alıştay, kongre ve konferans d&uuml;zenleme, festival ve fuarlarda yer alma, araştırma, inceleme, g&ouml;zlem gibi k&uuml;lt&uuml;rel, sanatsal, bilimsel, sportif ve teknolojik etkinliklerde bulunarak &uuml;niversite yaşamına ve eğitim &ndash; &ouml;ğretime katkı sağlarlar.</p>
+
+<p>(2) &Ouml;ğrenci toplulukları her bahar d&ouml;nemi sonunda faaliyet raporlarını, SKS Daire Başkanlığı&rsquo;na bildirmek zorundadırlar.</p>
+
+<p>&nbsp;(3) A ve B tipi <strong>&ouml;ğrenci toplulukları g&uuml;z d&ouml;neminde yapmak istedikleri etkinliklerini g&uuml;z d&ouml;neminin ilk &uuml;&ccedil; haftası; bahar d&ouml;neminde yapmak istedikleri etkinlikleri ise g&uuml;z d&ouml;neminin son &uuml;&ccedil; haftası sonuna kadar tahmini b&uuml;t&ccedil;eleri ile birlikte topluluk başkanı ve akademik danışman imzalı olarak SKS Daire Başkanlığı&rsquo;na vermek zorundadır.</strong> C Tipi &ouml;ğrenci toplulukları ise her t&uuml;rl&uuml; istek ve etkinlik başvurularını aynı şekilde hazırlayarak kendi akademik birimlerine vermeli, akademik birim tarafından uygun g&ouml;r&uuml;len talepler SKS Daire Başkanlığı&rsquo;na g&ouml;nderilmelidir.</p>
+
+<p>(4)<strong> &Ouml;ğrenci toplulukları her bahar d&ouml;nemi sonunda kullanmak zorunda oldukları defter ve belgeleri SKS Daire Başkanlığı&rsquo;na getirerek kontrol ettirmek ve onaylatmak suretiyle kayıt yenilemek zorundadırlar.</strong></p>
+
+<p>(5) <strong>Kaydını yenilemeyen topluluklar, etkinliklerinde &uuml;niversite olanaklarından yararlanamazlar ve maddi destek alamazlar.</strong> Bahar d&ouml;neminde kaydını yenilemeyen topluluklar, g&uuml;z d&ouml;nemi ilk &uuml;&ccedil; haftası sonuna kadar yenileyebilirler. Birbirini takip eden iki d&ouml;nemde kaydını yenilemeyen topluluklar askıya alınır ve &uuml;st &uuml;ste &uuml;&ccedil; d&ouml;nem etkinlikte bulunamazlar.</p>
+
+<p>(6) <strong>Yukarıda belirtilen hususlara uymayan, se&ccedil;im sonu&ccedil;larını bildirmeyen ve t&uuml;z&uuml;klerinde belirtilen faaliyet alanlarında &ccedil;alışma yapmayan veya aykırı alanlarda faaliyette bulunan topluluk Etkinlik Kurulu&rsquo;nun kararıyla kapatılabilir.</strong> Kapatma kararına karşı on beş g&uuml;n i&ccedil;inde Rekt&ouml;rl&uuml;k Makamına itiraz edilebilir, itiraz sonucu verilecek karar kesindir.</p>
+
+<p><strong>Toplulukların etkinliklerinin duyurulması ve tanıtımı</strong></p>
+
+<p>(1) &Ouml;ğrenci toplulukları, etkinliklerinin duyurulması ve tanıtımında, aşağıda sıralanan &uuml;niversite birimlerinden yararlanabilir ve yetkililerden danışmanlık hizmeti alabilirler.</p>
+
+<p>a)S.K.S. Daire Başkanlığı K&uuml;lt&uuml;r İşleri Şube M&uuml;d&uuml;rl&uuml;ğ&uuml;,</p>
+
+<p>b)Bilgi İşlem Daire Başkanlığı,</p>
+
+<p>c)Basın-Yayın Birimi,</p>
+
+<p>d)&Ouml;ğrenci Konseyi Başkanlığı,</p>
+
+<p>(2) &Ouml;ğrenci toplulukları yazışma, afiş, duyuru ve etkinliklerde topluluk adı, Ondokuz Mayıs &Uuml;niversitesi ve SKS Daire Başkanlığı&rsquo;nın adını ve/veya logosunu birlikte kullanmak zorundadır.</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p><strong>&Uuml;niversite mek&acirc;nlarının kullanımı</strong></p>
+
+<p>&nbsp;</p>
+
+<p>(1) &Ouml;ğrenci toplulukları izin verilen etkinliklerin ger&ccedil;ekleştirilmesinde,&nbsp; &uuml;niversite mek&acirc;nlarından &uuml;cretsiz olarak yararlanabilirler.</p>
+
+<p><strong>Toplulukların harcamaları</strong></p>
+
+<p>(1) &Ouml;ğrenci topluluklarının etkinliklerini s&uuml;rd&uuml;rmesi i&ccedil;in gerekli olan aşağıdaki harcamalar b&uuml;t&ccedil;e olanakları nispetinde &Uuml;niversite b&uuml;t&ccedil;esinden karşılanabilir.</p>
+
+<p>a) Etkinliklerin gerektirdiği her t&uuml;rl&uuml; demirbaş ve sarf malzemeleri ile ara&ccedil;-gere&ccedil;lerin temini ve bunların giderleri,</p>
+
+<p>b) Etkinliklerin yapılması ile ilgili beslenme, barınma, ulaşım, iletişim ve diğer organizasyon giderleri,</p>
+
+<p>c) Etkinliklerin gerektirdiği diğer d&uuml;zenleme ve organizasyon giderleri,</p>
+
+<p>(2) &Ouml;ğrenci topluluklarında &ouml;ğretici-&ccedil;alıştırıcı g&ouml;revi SKS Daire Başkanlığı&rsquo;nın &ouml;nerisi &uuml;zerine Rekt&ouml;r onayı ile verilir. Bunlara y&uuml;r&uuml;tt&uuml;kleri g&ouml;rev karşılığı haftada her bir g&ouml;rev i&ccedil;in en fazla on iki saat &uuml;cret &ouml;denir. &Ouml;denecek &uuml;cret B&uuml;t&ccedil;e Kanunu&rsquo;nda belirtilen &ouml;ğretim elemanları ders &uuml;cretini ge&ccedil;memek &uuml;zere SKS Daire Başkanlığı Y&ouml;netim Kurulu kararıyla belirlenir. Ayrıca gerekli durumlarda eğitici-&ccedil;alıştırıcı ihtiyacı ile etkinlikte gereken sanatsal hizmetler, hizmet alımı usul&uuml; ile de karşılanabilir.</p>
+
+<p><strong>Sponsorluk ve bağış desteği</strong></p>
+
+<p>(1)&nbsp; &Ouml;ğrenci toplulukları, etkinliklerine mali kaynak sağlayabilmek amacıyla &ccedil;eşitli ger&ccedil;ek veya t&uuml;zel kişilerden sponsorluk veya bağış desteği alabilirler.</p>
+
+<p><strong>a) Sponsorluk;</strong></p>
+
+<p>1- &Ouml;nce yapılacak işbirliğinin ve sağlanacak desteğin mahiyeti hakkında SKS Daire Başkanlığı&rsquo;na yazılı bilgi verilmeli,</p>
+
+<p>2- Rekt&ouml;r onayı alındıktan sonra sponsor ile sponsorluğun şekli ve mali değerini belirten protokol imzalanmalı ve protokol SKS Daire Başkanlığı&rsquo;na teslim edildikten sonra hazırlıklarına başlanmalıdır.</p>
+
+<p><strong>b) Bağış;</strong></p>
+
+<p>&nbsp;</p>
+
+<p>1- &Ouml;ğrenci topluluklarının etkinliklerini desteklemek i&ccedil;in bağış yapmak isteyen ger&ccedil;ek veya t&uuml;zel kişilerden dilek&ccedil;e alınmalı,</p>
+
+<p>2- Rekt&ouml;r onayı alındıktan sonra, nakdi bağış &Uuml;niversite hesabının ilgili kalemine, ayni bağışlar taşınır kayıtlarına alındıktan sonra kullanılabilir,</p>
+
+<p>3- &Ouml;ğrenci toplulukları nakit veya kendi hesaplarına bağış alamazlar.</p>
+
+<p>(2) Sponsorluk ve bağış desteği &Uuml;niversiteyi yasal ve mali sorumluluk altında bırakacak nitelikte olamaz. Alkol ve t&uuml;t&uuml;n &uuml;r&uuml;nleri &uuml;reten ve pazarlayan şirketlerin sponsorluk &ouml;nerileri kabul edilmez.</p>
+
+<p><strong>Tutulması gereken defter ve belgeler</strong></p>
+
+<p>(1) Aşağıda yazılı defter ve belgeler SKS Daire Başkanlığı tarafından her sayfası numaralandırılıp m&uuml;h&uuml;rlenerek imza karşılığı kul&uuml;p başkanına teslim edilir.</p>
+
+<p>a)&Uuml;ye kayıt defteri,</p>
+
+<p>b)Gelen - giden evrak defteri,</p>
+
+<p>c)Karar defteri,</p>
+
+<p>d)Demirbaş kayıt defteri,</p>
+
+<p><strong>&Ouml;NEMLİ NOT:</strong>&nbsp;Ders kaydını yaptıran t&uuml;m Ondokuz Mayıs &Uuml;niversitesi &ouml;ğrencileri istedikleri &ouml;ğrenci topluluklarına &uuml;ye olabilir. Bir &ouml;ğrenci birden fazla topluluğa &uuml;ye olabilir ancak birden fazla y&ouml;netim kurulunda yer alamaz.&nbsp;</p>
+
+<p><strong>2012/227 sayılı Senato Kararı gereği; &nbsp;</strong>&Uuml;niversitemizde faaliyet g&ouml;steren t&uuml;m &ouml;ğrenci kul&uuml;plerinin adı başka bir işleme gerek kalmaksızın topluluk olarak değiştirilmiş ve 22 Şubat 2013 tarihine kadar&nbsp;t&uuml;z&uuml;klerini aşağıdaki Y&ouml;nergeye uygun hale getirmeleri gerekmektedir.&nbsp;</p>
+
 	</div>
 </div>
