--- a/app/views/admin/_admin_navbar.html.erb
+++ b/app/views/admin/_admin_navbar.html.erb
@@ -1,14 +1,17 @@
-<div class="container">
-<nav class="navbar navbar-inverse ">
-  <div class="container-fluid">
-    <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-             <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-        </button>
-        <%= link_to "Anasayfa", root_path, class:"navbar-brand" %>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
+
+
+<header class="main-header">
+        <a href="index2.html" class="logo">
+          <!-- mini logo for sidebar mini 50x50 pixels -->
+          <span class="logo-mini"><b>A</b>LT</span>
+          <!-- logo for regular state and mobile devices -->
+          <span class="logo-lg"><b>Omü Admin </b>Panel</span>
+        </a>
+        <!-- Header Navbar: style can be found in header.less -->
+        <nav class="navbar navbar-static-top" role="navigation">
+          <!-- Sidebar toggle button-->
+            <ul class="nav navbar-nav">
+            <%= link_to "Anasayfa", root_path, class:"navbar-brand" %>
             <li>
                 <%= link_to "Yönerge", home_yonerge_path %>
             </li>
@@ -16,9 +19,13 @@
                 <%= link_to "Topluluklar", clubs_path %>
             </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
 
-            <li class="dropdown">
+          <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+            
+              
+            
+              <li class="dropdown">
              <% if user_signed_in? %>
                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.first_name %><strong class="caret"></strong></a>
                 <ul class="dropdown-menu">
@@ -41,8 +48,10 @@
                 
                 <% end %>
             </li>
-        </ul>
-    </div>
-  </div>
-</nav>
-</div>
+                </ul>
+              </li>
+              <!-- Control Sidebar Toggle Button -->
+            </ul>
+          </div>
+        </nav>
+      </header>
