--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -1,19 +1,33 @@
-<div class="panel panel-default">
-    <div class="panel-body">
-         <ul class="sidebar">
-            <li >
-                <a href="#">
-                   Admin Panel
-                </a>
+
+<body class="hold-transition skin-blue sidebar-mini">
+<aside class="main-sidebar ">
+        <!-- sidebar: style can be found in sidebar.less -->
+        <section class="sidebar">
+          <!-- Sidebar user panel -->
+          <div class="user-panel">
+            <div class="pull-left image">
+                <%= image_tag current_user.avatar.url ,height: '25', width: '25', class:"image" %>
+            </div>
+            <div class="pull-left info">
+              <%= current_user.first_name %> <%= current_user.last_name %>
+            </div>
+          </div>
+          
+          <!-- sidebar menu: : style can be found in sidebar.less -->
+          <ul class="sidebar-menu">
+            <li class="header">PANEL</li>
+
+
+            <li class="treeview">
+              <%=link_to "Kulüpler", admin_clubs_path %>
             </li>
-            <li>
-                <%=link_to "Kulüpler", admin_clubs_path %>
+
+            <li class="treeview">
+              <%=link_to "Kişiler", admin_users_path %>
             </li>
-            <li>
-                <%=link_to "Kişiler", admin_users_path %>
-            </li>
-            <li>
-               <%=link_to "Haberler", admin_infos_path %>
+
+            <li class="treeview">
+              <%=link_to "Haberler", admin_infos_path %>
             </li>
             <li>
                 <%=link_to "Duyurular", admin_notices_path %>
@@ -21,6 +35,10 @@
             <li>
                 <%=link_to "Etkinlikler", admin_activities_path %>
             </li>
-            </ul>
-    </div>
-</div>
+
+           
+          </ul>
+        </section>
+        <!-- /.sidebar -->
+      </aside>
+    </body>
