--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,10 +11,10 @@
 
 <div class="container">
   <div class="row">
-		<div class="col-md-4">
+		<div class="col-md-0">
 		  <%= render 'admin/sidebar'%>
 	  </div>
-    <div class="col-md-8">
+    <div class=" col-md-offset-2">
       <div class="panel panel-default">
 	      <div class="panel-body">
 	        <%= yield %>
