--- a/app/views/home/yonerge.html.erb
+++ b/app/views/home/yonerge.html.erb
@@ -1,7 +1,10 @@
 <%= render "header" %>
-<div class="row">
-	<div class="col-md-12">
-<h1><strong>&Ouml;ĞRENCİ TOPLULUKLARI</strong></h1>
+
+<div class="box box-default">
+              <div class="box-header with-border">
+                <h3 class="box-title">&Ouml;ĞRENCİ TOPLULUKLARI</h3>
+              </div>
+              <div class="box-body">
 
 <p><strong>Genel İlke</strong></p>
 
@@ -94,6 +97,5 @@
 <p><strong>&Ouml;NEMLİ NOT:</strong>&nbsp;Ders kaydını yaptıran t&uuml;m Ondokuz Mayıs &Uuml;niversitesi &ouml;ğrencileri istedikleri &ouml;ğrenci topluluklarına &uuml;ye olabilir. Bir &ouml;ğrenci birden fazla topluluğa &uuml;ye olabilir ancak birden fazla y&ouml;netim kurulunda yer alamaz.&nbsp;</p>
 
 <p><strong>2012/227 sayılı Senato Kararı gereği; &nbsp;</strong>&Uuml;niversitemizde faaliyet g&ouml;steren t&uuml;m &ouml;ğrenci kul&uuml;plerinin adı başka bir işleme gerek kalmaksızın topluluk olarak değiştirilmiş ve 22 Şubat 2013 tarihine kadar&nbsp;t&uuml;z&uuml;klerini aşağıdaki Y&ouml;nergeye uygun hale getirmeleri gerekmektedir.&nbsp;</p>
-
-	</div>
-</div>
+              </div><!-- /.box-body -->
+            </div><!-- /.box -->
