--- a/app/views/clubs/_clubheader.html.erb
+++ b/app/views/clubs/_clubheader.html.erb
@@ -1,71 +1,72 @@
+      <header class="main-header">
+        <nav class="navbar navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <%= link_to "SksKulupler", root_path, class:"navbar-brand" %>
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                <i class="fa fa-bars"></i>
+              </button>
+            </div>
 
-<div class="row">
-	<div class="col-md-6">
-		<div>
-			<h1>
-				<%= @club.name %> <br /><small>Ondokuz Mayıs Üniversitesi</small>
-			</h1>
-		</div>
-	</div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li>
+					<%= link_to "Yönerge", home_yonerge_path %>
+				</li>
+				<li>
+					<%= link_to "Topluluklar", clubs_path %>
+				</li>
+              </ul>
+             
+            </div><!-- /.navbar-collapse -->
+            <!-- Navbar Right Menu -->
+              <div class="navbar-custom-menu">
+                <ul class="nav navbar-nav">
+                  <!-- Messages: style can be found in dropdown.less-->
+                  
+                  <!-- User Account Menu -->
+                  <li class="dropdown">
+         <% if user_signed_in? %>
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.first_name %><strong class="caret"></strong></a>
+          <ul class="dropdown-menu">
+            <% if current_user.admin? %>
+              <li>
+              <%= link_to "Yönetici Paneli", admin_clubs_path %>
+            </li>
+            <% end %>
 
-	<div class="col-md-6">
-		<nav class="navbar navbar-default" role="navigation"  style="margin-top:10%">
-			<div class="navbar-header">
-				<%= link_to "Anasayfa", root_path, class:"navbar-brand" %>
-			</div>
-			
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-			        <li>
-						<%= link_to "Yönerge", home_yonerge_path %>
-					</li>
-					<li>
-						<%= link_to "Topluluklar", clubs_path %>
-					</li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
+            <li>
+              <%= link_to "Kulüplerim", home_kuluplerim_path %>
+            </li>
 
-					<li class="dropdown">
-					 <% if user_signed_in? %>
-						 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.first_name %><strong class="caret"></strong></a>
-						<ul class="dropdown-menu">
-							<% if current_user.admin? %>
-								<li>
-								<%= link_to "Yönetici Paneli", admin_clubs_path %>
-							</li>
-							<% end %>
-
-							<li>
-								<%= link_to "Kulüplerim", clubs_path %>
-							</li>
-
-							<li>
-								<%= link_to "Hesabımı Düzenle", edit_user_registration_path %>
-							</li>
-							<li class="divider">
-							</li>
-							<li>
-								<%= link_to "Çıkış", destroy_user_session_path, method: :delete %>
-							</li>
-						</ul>
-					  <% else %>
-					  		<li>
-					  		<%= link_to "Giriş", new_user_session_path %>
-						  	</li>
-							<li>
-								<%= link_to "Kayıt ol", new_user_registration_path %>
-							</li>
-						
-						<% end %>
-					</li>
-				</ul>
-			</div>
-			
-		</nav>
-	</div>
-</div>
-
-
-
-
-
+            <li>
+              <%= link_to "Hesabımı Düzenle", edit_user_registration_path %>
+            </li>
+            <li class="divider">
+            </li>
+            <li>
+              <%= link_to "Çıkış", destroy_user_session_path, method: :delete %>
+            </li>
+          </ul>
+          <% else %>
+              <li>
+              <%= link_to "Giriş", new_user_session_path %>
+              </li>
+            <li>
+              <%= link_to "Kayıt ol", new_user_registration_path %>
+            </li>
+          
+          <% end %>
+        </li>
+                </ul>
+              </div><!-- /.navbar-custom-menu -->
+          </div><!-- /.container-fluid -->
+        </nav>
+      </header>
+      <!-- Full Width Column -->
+      <div class="content-wrapper">
+        <div class="container">
+        <h2 class="page-header"><%= @club.name%></h2>
+          <br/>
+      
