--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,72 +1,82 @@
 <%= render "header" %>
+  <div class="box box-solid">
+    <div class="box-body">
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="item active">
+            <%= image_tag("slide1.jpg") %>
+          </div>
+          <div class="item">
+            <%= image_tag("slide2.jpg") %>
+            
+          </div>
+        </div>
+        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+          <span class="fa fa-angle-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+          <span class="fa fa-angle-right"></span>
+        </a>
+      </div>
+    </div><!-- /.box-body -->
+  </div><!-- /.box -->
+<div class="row">
 <div class="col-md-3">
-	<div class="panel panel-danger">
-	  <div class="panel-heading">
-	    <h3 class="panel-title">Topluluklar</h3>
-	  </div>
-	  <div class="panel-body">
-	    <div class="list-group">
-		  <% @Club.each do |club| %>
-		  <div class="list-group-item">	
-			   <%= image_tag club.avatar.url ,height: '25', width: '25'%>
-			   &nbsp;
-			  <%= link_to club.name , club%>
-		  	
-		  </div>
-		 
-		  
-		  <% end %>
-		</div>
-	  </div>
-	</div>
-</div>
-<div class="col-md-6">
-	<div class="panel panel-warning">
-	  <div class="panel-heading">
-	    <h3 class="panel-title">Etkinlikler</h3>
-	  </div>
-	  <div class="panel-body">
-	    <div class="list-group">
-		  <% @Activities.each do |activity| %>
-    		<div class="list-group-item">
-    		<%= link_to activity.title, activity %>
-            <span style="float:right;"><%= activity.start_date.to_s%></span>
+				<div class="well"> 
+              	<ul class="nav nav-stacked" id="sidebar">
+              	<div class="list-group">
+				  <% @Club.each do |club| %>
+				  <div class="list-group-item">	
+					   <%= image_tag club.avatar.url ,height: '25', width: '25'%>
+					   &nbsp;
+					  <%= link_to club.name , club%>
+				  </div>
+				  <% end %>
+				</div>
+              	</ul>
+  				</div>
 
+      		</div>
+            <div class="col-md-9">
+              <!-- Custom Tabs (Pulled to the right) -->
+              <div class="nav-tabs-custom">
+                <ul class="nav nav-tabs pull-right">
+                  <li class="active"><a href="#tab_1-1" data-toggle="tab" aria-expanded="true">Etkinlikler</a></li>
+                  <li class=""><a href="#tab_2-2" data-toggle="tab" aria-expanded="false">Haberler</a></li>
+                  <li class=""><a href="#tab_3-2" data-toggle="tab" aria-expanded="false">Duyurular</a></li>
+                  <li class="pull-left header"><i class="fa fa-th"></i> Custom Tabs</li>
+                </ul>
+                <div class="tab-content">
+                  <div class="tab-pane active" id="tab_1-1">
+                    <% @Activities.each do |activity| %>
+						<div class="list-group-item">
+						<%= link_to activity.title, activity %>
+				        <span style="float:right;"><%= activity.start_date.to_s%></span>
+						</div>
+						<% end%>
+                  </div><!-- /.tab-pane -->
+                  <div class="tab-pane" id="tab_2-2">
+                    <div class="list-group">
+						  <% @infos.each do |info| %>
 
-    		</div>
-
-          <% end %>
-
-		</div>
-	  </div>
-	</div>
-	<div class="panel panel-primary">
-	  <div class="panel-heading">
-	    <h3 class="panel-title">Haberler</h3>
-	  </div>
-	  <div class="panel-body">
-	    <div class="list-group">
-		  <% @infos.each do |info| %>
-    
-            <%= link_to info.title, info, class: "list-group-item" %>
-          <% end %>
-		</div>
-	  </div>
-	</div>
-</div>
-<div class="col-md-3">
-	<div class="panel panel-success">
-	  <div class="panel-heading">
-	    <h3 class="panel-title">Duyurular</h3>
-	  </div>
-	  <div class="panel-body">
-	    <div class="list-group">
-		  <% @Notice.each do |notice| %>
-    
-            <%= link_to notice.title, notice, class: "list-group-item" %>
-          <% end %>
-		</div>
-	  </div>
-	</div>
-	
-</div>
+					        <%= link_to info.title, info, class: "list-group-item" %>
+					      <% end %>
+						</div>
+					  </div>
+                  </div><!-- /.tab-pane -->
+                  <div class="tab-pane" id="tab_3-2">
+                   <div class="list-group">
+					  <% @Notice.each do |notice| %>
+			    
+			            <%= link_to notice.title, notice, class: "list-group-item" %>
+			          <% end %>
+					</div>
+                  </div><!-- /.tab-pane -->
+                </div><!-- /.tab-content -->
+              </div><!-- nav-tabs-custom -->
+            </div><!-- /.col -->
+          </div>
