--- a/app/views/infos/show.html.erb
+++ b/app/views/infos/show.html.erb
@@ -1,9 +1,17 @@
-
 <%= render "home/header" %>
 <p id="notice"><%= notice %></p>
-<h2><%= @info.title %></h2> </br>
 
-<p>
-  <%= image_tag @info.avatar.url  %></br></br>
-  <%= @info.content %>
-</p>
+<div class="row">
+  <div class="col-md-12">
+  <div class="box box-primary">
+      <div class="box-body">
+  <h2><%= @info.title %></h2> </br>
+    <p>
+	  <%= image_tag @info.avatar.url  %></br></br>
+	  <%= @info.content %>
+	</p>
+	  </div>
+	</div>
+  </div><!-- /.col -->
+</div>
+
