--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -1,12 +1,23 @@
 <%= render "home/header" %>
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-3">
+    <p id="notice"><%= notice %></p>
+    <!-- Profile Image -->
+    <div class="box box-primary">
+      <div class="box-body box-profile">
+        <%= image_tag @club.avatar.url ,height: '125', width: '125', class:"profile-user-img img-responsive img-circle" %>
+        <h3 class="profile-username text-center"><%= @club.name%></h3>
+        <p class="text-muted text-center">  </p>
+      </div><!-- /.box-body -->
+    </div><!-- /.box -->
+  </div><!-- /.col -->
+  <div class="col-md-9">
+    <h2><%= @notice.title %></h2> 
+	<%= image_tag @notice.avatar.url %>
+	</br></br>
+	<p>
+	  <%= @notice.content %>
+	</p>
+  </div><!-- /.col -->
+</div>
 
-<p>
-  <h3 align="right"><%= Club.find_by_id(@notice.club_id).name %></h3></br>
-</p>
-<h2><%= @notice.title %></h2> 
-<%= image_tag @notice.avatar.url %>
-</br></br>
-<p>
-  <%= @notice.content %>
-</p>
