--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -12,12 +12,16 @@
     </div><!-- /.box -->
   </div><!-- /.col -->
   <div class="col-md-9">
+  <div class="box box-primary">
+      <div class="box-body">
     <h2><%= @notice.title %></h2> 
 	<%= image_tag @notice.avatar.url %>
 	</br></br>
 	<p>
 	  <%= @notice.content %>
 	</p>
+    </div>
+  </div>
   </div><!-- /.col -->
 </div>
 
