--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,9 @@
 				  <div class="list-group-item">	
 					   <%= image_tag club.avatar.url ,height: '25', width: '25'%>
 					   &nbsp;
-					  <%= link_to club.name , club%>
+          <span class="TextType">         
+          <%= link_to club.name , club%></span>
+	
 				  </div>
 				  <% end %>
 				</div>
