--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,7 @@
 
-
+*{
+	font-family: "Times New Roman", Times, serif;
+}
 body {
 background-image: url(bg.jpg);
 background-repeat: repeat;
@@ -8,13 +10,7 @@ background-color: white;
 background-position: top-left;
 }
 
-/*!
- * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
 
-/* Toggle Styles */
 
 .sidebar{
     list-style: none;
