--- a/app/views/admin/clubs/_form.html.erb
+++ b/app/views/admin/clubs/_form.html.erb
@@ -12,32 +12,28 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label "Ad" %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :logo %><br>
-    <%= f.text_field :logo %>
-  </div>
-  <div class="field">
-  <%= f.label :avatar %><br>
+  <%= f.label "Logo" %><br>
   <%= f.file_field :avatar %>
-  
   </div>
   <div class="field">
-    <%= f.label :supervisor %><br>
-    <%= f.number_field :supervisor %>
-  </div>
-  <div class="field">
-    <%= f.label :regulation %><br>
-    <%= f.text_area :regulation %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
+    <%= f.label "Açıklama" %><br>
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :email %><br>
+    <%= f.label "Danışman" %><br>
+    <%= f.number_field :supervisor %>
+  </div>
+  <div class="field">
+    <%= f.label "Yönetmelik" %><br>
+    <%= f.text_area :regulation %>
+  </div>
+
+  <div class="field">
+    <%= f.label "E-Posta" %><br>
     <%= f.text_field :email %>
   </div>
   <div class="actions">
