--- a/app/views/admin/clubs/edit.html.erb
+++ b/app/views/admin/clubs/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Club</h1>
+<h1>Kulüp Düzenle</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @club %> |
-<%= link_to 'Back', clubs_path %>
+<%= link_to 'Kulübü Görüntüle', @club %> |
+<%= link_to 'Geri', clubs_path %>
