--- a/app/views/admin/clubs/new.html.erb
+++ b/app/views/admin/clubs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Club</h1>
+<h1>Yeni Kulüp</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', clubs_path %>
+<%= link_to 'Geri', clubs_path %>
