--- a/app/views/admin/clubs/index.html.erb
+++ b/app/views/admin/clubs/index.html.erb
@@ -15,6 +15,7 @@
         
     <div class="col-md-3">
         <%= link_to "Düzenle", edit_admin_club_path(club.id), class:"btn btn-default" %>
+        <%= link_to "Sil", admin_club_path(club.id), class:"btn btn-danger" , method: :delete , data: {confirm: "Emin misiniz?"} %>
     </div> 
     </div>
 
@@ -24,6 +25,7 @@
 
 
 <%=link_to "Klup ekle", new_admin_club_path, class:"btn btn-default"%>
+
 
             
 
