--- a/app/views/admin/activities/edit.html.erb
+++ b/app/views/admin/activities/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>Editing Activity</h1>
+<h1>Etkinlik Düzenle</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @activity %> |
-<%= link_to 'Back', activities_path %>
+<%= link_to 'Etkinliği Görüntüle', @activity %> |
+<%= link_to 'Geri', activities_path %>
 
