--- a/app/views/admin/clubs/index.html.erb
+++ b/app/views/admin/clubs/index.html.erb
@@ -24,7 +24,7 @@
 <% end %>
 
 
-<%=link_to "Klup ekle", new_admin_club_path, class:"btn btn-default"%>
+<%=link_to "Kulüp ekle", new_admin_club_path, class:"btn btn-default"%>
 
 
             
