--- a/app/views/admin/activities/index.html.erb
+++ b/app/views/admin/activities/index.html.erb
@@ -15,6 +15,7 @@
         
     <div class="col-md-3">
         <%= link_to "Düzenle", edit_admin_activity_path(activity.id), class:"btn btn-default" %>
+        <%= link_to "Sil", admin_activity_path(activity.id), class:"btn btn-danger" , method: :delete , data: {confirm: "Emin misiniz?"} %>
     </div> 
     </div>
 
