--- a/app/views/admin/notices/index.html.erb
+++ b/app/views/admin/notices/index.html.erb
@@ -10,4 +10,4 @@
   </div>
 <% end %>
 
-<%= link_to "Duyuru Ekle", new_admin_notice_path %>
+<%= link_to "Duyuru Ekle", new_admin_notice_path , class: 'btn btn-default' %>
