--- a/app/views/admin/activities/edit.html.erb
+++ b/app/views/admin/activities/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Etkinliği Görüntüle', @activity %> |
-<%= link_to 'Geri', activities_path %>
+<%= link_to 'Geri', activities_path , class: "btn btn-default" %>
 
