--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -20,20 +20,21 @@
   <div class="field">
   <%= f.input :avatar, as: :file , label: "Etkinlik Resmi" %>
   </div>
-  <div class="field">
+  <div class="field ">
  
     <%= f.input :description , label: "Açıklama" %>
   </div>
 
-  <div class="">
+  <div class="field col-xs-5">
 
     <%= f.input :start_date, label: "Başlangıç Zamanı" %>
   </div>
-  <div class="field">
+  <div class="field col-xs-5 col-xs-offset-1">
     <%= f.input :finish_date , label: "Bitiş Zamanı" %>
   </div>
-  <div class="field">
 
+
+  <div class="field">
     <%= f.input :address , label: "Etkinlik Adresi" %>
   </div>
   <div class="actions">
