small view changes

--- a/app/views/admin/activities/new.html.erb
+++ b/app/views/admin/activities/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Geri', clubs_path ,class: "btn btn-danger"%>
+<%= link_to 'Geri', clubs_path ,class: "btn btn-default"%>
