--- a/app/views/admin/clubs/edit.html.erb
+++ b/app/views/admin/clubs/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Kulübü Görüntüle', @club %> |
-<%= link_to 'Geri', clubs_path %>
+<%= link_to 'Geri', clubs_path ,class: "btn btn-default"%>
