--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Person</h1>
+<h1>Yeni Kullanıcı</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_users_path %>
+<%= link_to 'Geri', admin_users_path %>
