--- a/app/views/admin/notices/index.html.erb
+++ b/app/views/admin/notices/index.html.erb
@@ -1,13 +1,18 @@
 <% @notices.each do |notice| %>
-  <div class="panel panel-default">
-    <div class="panel-heading"><h2><%= notice.title %></h2></div>
-    <div class="panel-body">
-      <%= notice.content %><br />
-      <%= image_tag notice.avatar.url ,height: '25', width: '25' %>
-      <%= link_to "Düzenle", edit_admin_notice_path(notice.id), class:"btn btn-default" %>
-       <%= link_to "Sil", admin_notice_path(notice.id), class:"btn btn-danger" , method: :delete , data: {confirm: "Emin misiniz?"} %>
+
+ <div class="row">
+    <div class="col-md-1">
+        <%= image_tag notice.avatar.url ,height: '25', width: '25' %>
     </div>
-  </div>
+    <div class="col-md-8" >
+        <%=notice.title%>
+    </div>        
+    <div class="col-md-3">
+        <%= link_to "Düzenle", edit_admin_notice_path(notice.id), class:"btn btn-default" %>
+        <%= link_to "Sil", admin_notice_path(notice.id), class:"btn btn-danger" , method: :delete , data: {confirm: "Emin misiniz?"} %>
+    </div> 
+</div>
+
 <% end %>
 
 <%= link_to "Duyuru Ekle", new_admin_notice_path , class: 'btn btn-default' %>
