--- a/app/views/admin/clubs/_form.html.erb
+++ b/app/views/admin/clubs/_form.html.erb
@@ -23,7 +23,7 @@
   <div class="field">
     <% array = [] %>
     <%= f.input :supervisor do %>
-      <%= f.select :supervisor, supervisorr %>
+      <%= f.select :supervisor, clubmembers %>
     <% end %>
  </div>
   <div class="field">
